Fixing haxelib whitespace issues (#1217)